<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">AncillaryScreens</string>
    <string name="about_us">About Us</string>
    <string name="resend_otp_profile">कृपया ओटीपी को पुनः भेजें</string>
    <string name="btn_backspace">बैकस्पेस</string>
    <string name="btn_clear">हटाएं</string>
    <string name="confirm_password">पासवर्ड की पुष्टि कीजिये</string>
    <string name="update_failed">उपयोगकर्ता विवरण अपडेट करने में विफल रहे। कृपया अपना इंटरनेट जांचें</string>
    <string name="contact_admin_for_this">ऐसा लगता है कि इस मोबाइल नंबर के साथ कोई उपयोगकर्ता पंजीकृत नहीं है।\nपासवर्ड रीसेट के लिए कृपया हेल्पलाइन से संपर्क करें।</string>
    <string name="empty_otp">ओटीपी खाली नहीं हो सकता</string>
    <string name="empty_password_error">पासवर्ड खाली नहीं हो सकता</string>
    <string name="enter_new_password1"> नया पासवर्ड दर्ज करें</string>
    <string name="successful_update"> यूजर का विवरण अपडेट हो गया है</string>
    <string name="mulitple_users_same_phone_found">समान संपर्क नंबर वाले एकाधिक उपयोगकर्ता मिले। कृपया सुनिश्चित करें कि उसी संपर्क नंबर का उपयोग अन्य खातों द्वारा नहीं किया गया है। कृपया व्यवस्थापक से संपर्क करें</string>
    <string name="enter_otp">ओटीपी दर्ज करें</string>
    <string name="enter_the_registered_mobile_number_associated_with_your_account">अपने खाते से संबद्ध पंजीकृत मोबाइल नंबर दर्ज करें।</string>
    <string name="enter_valid_number">कृपया एक मान्य मोबाइल नंबर दर्ज करें।</string>
    <string name="enter_your_password">ऐप का पासवर्ड दर्ज करें</string>
    <string name="enter_your_username">अपना यूज़र नेम दर्ज करें</string>
    <string name="error_sending_otp">ओ.टी.पी. भेजने में त्रुटि| कृपया एडमिन से संपर्क करें।</string>
    <string name="errorlogin">आपको एप्लिकेशन में लॉग इन करने में त्रुटि हुई है। कृपया पुन: प्रयास करें।</string>
    <string name="forgot_pass">ऐप पासवर्ड रीसेट</string>
    <string name="forgot_password">पासवर्ड भूल गए?</string>
    <string name="incorrect_credentials"> यूजरनाम और पासवर्ड का मेल नहीं हुआ, पुनः कोशिश करें.</string>
    <string name="internet_not_connected">ऐसा लगता है कि आप इंटरनेट से नहीं जुड़े हैं। पासवर्ड बदलने के लिए कृपया अपने मोबाइल डेटा को ऑन करें। </string>
    <string name="internet_not_connected_error_login">ऐसा लगता है कि आप इंटरनेट से नहीं जुड़े हैं। कृपया लॉगिन करने के लिए अपने मोबाइल डेटा को ऑन करें। </string>
    <string name="internet_not_connected_otp">ऐसा लगता है कि आप इंटरनेट से नहीं जुड़े हैं। ओ.टी.पी. प्राप्त करने के लिए कृपया अपने मोबाइल डेटा को ऑन  करें।</string>
    <string name="internet_not_connected_profile_screen">ऐसा लगता है कि आप इंटरनेट से नहीं जुड़े हैं। अपनी प्रोफ़ाइल बदलने के लिए कृपया अपने मोबाइल डेटा को ऑन करें। </string>
    <string name="invalid_email"> अमान्य ई-मेल आई.डी.</string>
    <string name="invalid_phone_number">कृपया अपने द्वारा भरे गए मोबाइल नंबर की जांच करें</string>
    <string name="less_than_8_pass" tools:ignore="MissingTranslation">पासवर्ड 8 अक्षरों से कम नहीं हो सकता|</string>
    <string name="log_in">लॉग इन करें</string>
    <string name="user_logged_in">User logged-in successfully!</string>
    <string name="logging_in">लॉग इन हो रहा है</string>
    <string name="updating_details">स्कूल विवरण अद्यतन हो रहा है</string>
    <string name="login_failed_error">उपयोगकर्ता नाम या पासवर्ड मेल नहीं खाता। कृपया पुन: प्रयास करें।</string>
    <string name="no_users_found">कोई उपयोग्कर्ता नहीं मिले।</string>
    <string name="multiple_users_found">एक से अधिक उपयोगकर्ता पाए गए</string>
    <string name="not_connected_to_internet"> ऐसा प्रतीत होता है कि आप इन्टरनेट से जुड़े नहीं हैं, कृपया मोबाइल डाटा को ऑन करें.</string>
    <string name="number_eight">8</string>
    <string name="number_five">5</string>
    <string name="number_four">4</string>
    <string name="number_nine">9</string>
    <string name="number_one">1</string>
    <string name="number_seven">7</string>
    <string name="number_six">6</string>
    <string name="number_three">3</string>
    <string name="number_two">2</string>
    <string name="number_zero">0</string>
    <string name="otp">ओ.टी.पी.</string>
    <string name="otp_length">ओटीपी 4 अंकों का होना चाहिए</string>

    <string name="otp_sent_change_pwd">ओटीपी भेजा गया। कृपया पासवर्ड बदलने का प्रयास करें।</string>
    <string name="otp_sent_successfully"> %s  पर ओटीपी सफलतापूर्वक भेजा गया।</string>

    <string name="pass_cannot_be_empty">पासवर्ड खाली नहीं हो सकता</string>
    <string name="pass_change_successful"> पासवर्ड सफलतापूर्वक बदल दिया गया है। जारी रखने के लिए आपको फिर से लॉगिन करने की आवश्यकता है। आपको लॉगिन पृष्ठ पर पुनः निर्देशित किया जा रहा है।</string>
    <string name="pass_changed_redirecting">पासवर्ड सफलतापूर्वक बदल दिया गया है। आपको प्रोफ़ाइल पृष्ठ पर पुनर्निर्देशित कर रहा है</string>
    <string name="pass_did_not_match"> पासवर्ड मिलान नहीं कर रहे हैं। </string>
    <string name="pass_less_than_8_error"> कम से कम 8 अक्षरों का पासवर्ड आवश्यक है</string>
    <string name="password">पासवर्ड</string>
    <string name="password_changed"> पासवर्ड सफलतापूर्वक बदल दिया गया है। </string>
    <string name="password_changing">पासवर्ड बदला जा रहा है।</string>
    <string name="phone_number">फ़ोन नंबर</string>
    <string name="phone_number_email_not_simultaneous">फ़ोन नंबर और ईमेल दोनों एक ही समय में बदल नहीं सकते। कृपया पहले एक के साथ प्रयास करें। </string>
    <string name="phone_number_not_unique">फोन नंबर अद्वितीय नहीं है</string>
    <string name="please_enter_the_otp">कृपया संबंधित मोबाइल नंबर पर भेजे गए ओ.टी.पी. दर्ज करें।</string>
    <string name="please_enter_the_otp_sent_to_the_mobile_number_of_school_incharge" tools:ignore="MissingTranslation">Please enter the OTP sent to the associated mobile number.</string>
    <string name="please_sign_in_to_continue">सक्षम समीक्षा का उपयोग करने के लिए कृपया साइन इन करें।</string>
    <string name="resend_otp"><u> पुन: भेजें </u></string>
    <string name="resend_otp_password">ओटीपी पुनः भेजें</string>
    <string name="reset_here">यहां से पासवर्ड रीसेट करें</string>
    <string name="reset_password">पासवर्ड रीसेट करें</string>
    <string name="seconds_remaining">(00:30)</string>
    <string name="did_not_receive_otp">OTP नहीं प्राप्त हुआ?</string>
    <string name="verification_code">SMS से OTP भरें। </string>
    <string name="validate">जमा करें !</string>
    <string name="send_otp">OTP भेजें।</string>
    <string name="sending_otp"> OTP भेज रहें हैं</string>
    <string name="sending_the_request">ओटीपी भेजा जा रहा है</string>
    <string name="set_new_password"> नया पासवर्ड सेट करें </string>
    <string name="short_password_error">पासवर्ड कम से कम 8 अक्षर का होना चाहिए</string>
    <string name="submit">जमा करें</string>
    <string name="successful_logout_message">आप सफलता लॉग आउट कर चुके हैं।</string>
    <string name="these_following_fields_cannot_be_updated_in_case_there_is_any_issue_contact_admin_edudata_hp_gmail_com">इन निम्नलिखित क्षेत्रों को अपडेट नहीं किया जा सकता है। यदि कोई समस्या है, तो एडमिन से संपर्क करें</string>
    <string name="unable_to_log_out">अभी आपको एप्लिकेशन से लॉग आउट करने में असमर्थ है, कृपया पुन: प्रयास करें।</string>
    <string name="unable_to_send_OTP">ओटीपी नहीं भेजा जा सका।</string>
    <string name="user_name_empty_error">यूजरनेम खाली नहीं हो सकता</string>
    <string name="user_name_not_apt_length_error">यूजरनेम 3 से अधिक अक्षर का होना चाहिए</string>
    <string name="username">यूज़र नेम</string>
    <string name="welcome_heading_login_screen">आपका स्वागत है!</string>
    <string name="try_otp_for_no_phone">कृपया जांचें कि क्या आपके पास अपनी प्रोफ़ाइल में मोबाइल नंबर पंजीकृत है और यदि आप एक वैध संख्या दर्ज कर रहे हैं, यदि पंजीकृत है।</string>
    <string name="change_details">स्कूल का विवरण बदलें</string>
    <string name="unable_to_change_school">स्कूल की जानकारी को अपडेट करने में असमर्थ हैें।</string>
    <string name="school_changed">स्कूल का विवरण सफलतापूर्वक अपडेट किया गया है।</string>
    <string name="school_code">स्कूल कोड: %s</string>
    <string name="school_name_label">नाम: %s</string>
    <string name="school_block_label">ब्लॉक: %s</string>
    <string name="school_district_label">जिला: %s</string>
    <string name="if_your_school_details_are_incorrect_please_click_here_to_edit">यदि आपके स्कूल का विवरण गलत है, तो कृपया संपादित करने के लिए यहां क्लिक करें।</string>
    <string name="enter_phone_register">सत्यापन के लिए वन टाइम पासवर्ड प्राप्त करने के लिए अपना मोबाइल नंबर दर्ज करें</string>
    <string name="empty_username"> </string>
    <string name="otp_sent_successfully_for_username">OTP has been successfully sent to the registered mobile number</string>
    <string name="name_of_user">name of user</string>
    <string name="please_select_your_profile">Please select your profile</string>
    <string name="practice">Practice</string>
    <string name="assessment">आंकलन</string>
    <string name="please_select_assessment">कृपया आंकलन का प्रकार चुनें</string>
    <string name="baseline">Baseline</string>
    <string name="spot_assessment">SPOT Assessment</string>
    <string name="back">वापस जाए</string>
    <string name="please_enter_your_details">Please enter your details</string>
    <string name="enter_mobile_number">कृपया अपना मोबाइल नंबर दर्ज करें</string>
    <string name="setup_new_pin">Setup new pin</string>
    <string name="create_pin">Create Pin</string>
    <string name="incorrect_otp_entered">Incorrect OTP entered.</string>
    <string name="hey_there_">Hey there!</string>
    <string name="spot_assessments_are_not_live_right_now">SPOT Assessments are not live right now</string>
    <string name="enter_new_pin">Enter New Pin</string>
    <string name="entered_incorrect_pin">Entered incorrect Pin</string>
    <string name="enter_your_pin">Enter your pin</string>
    <string name="forgot_pin"><u>Forgot pin?</u></string>
    <string name="info_note"><u>सूचना नोट-</u></string>
    <string name="otp_verified_successfully">फ़ोन नंबर सफलतापूर्वक सत्यापित किया गया, कृपया पिन बनाएं।</string>
    <string name="otp_resend_success">ओटीपी सफलतापूर्वक पुन: भेज दिया गया है!</string>
    <string name="show_pin">show PIN</string>
    <string name="hide_pin">hide PIN</string>
    <string name="pin_created_successfully">Pin created successfully!</string>
    <string name="must_create_pin">You must create pin to take assessments</string>
    <string name="create_pin_later">Create pin later</string>
    <string name="trying_early">Already requested OTP! please retry in sometime!</string>
    <string name="pin_update_error">Pin updation failure, Please try again!</string>
    <string name="error_message_send_otp">This mobile number is not registered.\nTo register on Prerna portal, please call the DC Training/Quality in BSA office or call helpline number.</string>
    <string name="otp_not_exist">Entered OTP does not exist!</string>
    <string name="default_notification_channel_id">nl_default_notification_channel</string>
    <string name="nl_notification_channel_name">Nipun Lakshya Updates</string>
    <string name="teacher">शिक्षक</string>
    <string name="parent">अभिभावक</string>
    <string name="mentor">मेंटर</string>
    <string name="examiner">परीक्षक</string>
    <string name="trouble_in_login"> लॉगिन में समस्या? 0522-3538777</string>
    <string name="hint_mobile_no">जैसे: 9876543210</string>
    <string name="fill_otp">4 अंकों का OTP\nSMS से भरें।</string>
    <string name="set_pin">पिन सेट करें।</string>
    <string name="create_otp_desc">4 अंकों के पिन के माध्यम से आगे से आप\nऐप पर लॉगिन करेंगे।</string>

</resources>