<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="otpVerifyVm"
            type="com.samagra.parent.authentication.OTPViewVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_pin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_2e3192"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_otp_v_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_backspace_24"
            android:visibility="visible"
            android:onClick="@{()-> otpVerifyVm.onBackButtonClicked()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_20dp"
            android:layout_marginVertical="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/version_name_size"
            tools:text="version code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />


        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_nipun_bharat_round"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_header"
            app:layout_constraintVertical_bias="0">

            <TextView
                style="@style/text_title_style"
                android:layout_gravity="center_horizontal"
                android:text="@string/verification_code"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_large" />

            <TextView
                android:id="@+id/tv_show_phone_no"
                style="@style/text_title_style"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/margin_extra_large"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/fill_otp"
                android:textColor="@color/white" />

            <com.samagra.ancillaryscreens.custom.otptextview.OtpTextView
                android:id="@+id/otp_view_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:textColor="@color/black"
                app:bar_enabled="false"
                app:box_margin="@dimen/margin_medium"
                app:height="@dimen/otp_box_height"
                app:hide_otp="false"
                app:length="4"
                app:otp=""
                app:otp_box_background_active="@drawable/bg_otp_box_active"
                app:otp_box_background_error="@color/text_color_warning_red"
                app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
                app:otp_box_background_success="@color/green"
                app:otp_text_size="@dimen/text_size_medium"
                app:auto_size_enabled="true"
                app:width="@dimen/otp_box_width" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/validate_button"
                style="@style/button_long_style"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/horizontal_side_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:backgroundTint="@color/white"
                android:text="@string/validate"
                android:textColor="@color/blue_2e3192" />

            <TextView
                android:id="@+id/btn_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_large"
                android:clickable="@{otpVerifyVm.btnResendEnable}"
                android:enabled="@{otpVerifyVm.btnResendEnable}"
                android:gravity="center"
                android:onClick="@{()-> otpVerifyVm.onResendOtpButtonClicked()}"
                android:text="@string/resend_otp"
                android:textColor="@color/text_gray" />

            <TextView
                android:id="@+id/countdown_timer"
                style="@style/LabelStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/horizontal_side_margin"
                android:layout_marginTop="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/seconds_remaining"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
