<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_yellow">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/btn_close_width"
            android:layout_height="@dimen/btn_close_height"
            android:layout_margin="@dimen/margin_medium"
            android:src="@drawable/ic_close_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iv_pin_image"
            android:layout_width="@dimen/bottom_sheet_icon_height"
            android:layout_height="@dimen/bottom_sheet_icon_width"
            android:layout_margin="@dimen/margin_extra_large"
            android:src="@drawable/ic_create_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_pin_title"
            style="@style/text_title_style"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/setup_new_pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_pin_image" />

        <com.samagra.ancillaryscreens.custom.otptextview.OtpTextView
            android:id="@+id/et_pin_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            app:bar_enabled="false"
            app:otp_box_background_error="@color/text_color_warning_red"
            app:otp_box_background_active="@drawable/bg_otp_box_active"
            app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
            app:box_margin="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_large"
            app:height="@dimen/otp_box_height"
            app:hide_otp="false"
            app:otp_box_background_success="@color/green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_pin_title"
            app:length="4"
            app:otp=""
            app:otp_text_size="@dimen/text_size_medium"
            app:width="@dimen/otp_box_width" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pin_verify"
            style="@style/button_long_style"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:enabled="true"
            app:layout_constraintTop_toBottomOf="@id/et_pin_new"
            android:text="@string/create_pin"
            app:layout_constraintBottom_toTopOf="@id/btn_forgot"
            app:layout_goneMarginBottom="@dimen/margin_extra_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_goneMarginTop="@dimen/margin_extra_large"
            app:layout_constraintVertical_bias="1" />

        <TextView
            android:id="@+id/btn_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.066"
            android:text="@string/forgot_pin"
            android:textColor="@color/blue"
            android:layout_marginBottom="@dimen/margin_extra_large"
            android:visibility="visible"
            android:padding="@dimen/margin_4dp"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_pin_verify" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>